@@ -39,6 +39,7 @@ Version 0.6.0~dev
 	* Support channel merging/splitting in ffmpeg worker.
 	* Support MXF/D10 mapping in ffmpeg worker.
 	* Force stereo layout for mpegps format.
+	* Support simple h264 transcode in ffmpeg worker.
 
 Version 0.5.0 Released on 2012/03/29
 
